# event-bingo

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  docker-compose.dev.yaml  docker-compose.test.yaml  docker-compose.yaml  guest_anonymized.xlsx
backend/: .dockerignore  CLAUDE.md  Dockerfile  Dockerfile.old  SCHEMA.md  TESTING.md  alembic.ini  pyproject.toml  requirements.txt
backend/app/: alembic.ini  main.py  start.py
backend/app/api/: __init__.py
backend/app/api/admin/: __init__.py  auth.py  console_services.py  routes.py  schema.py  services.py
backend/app/api/admin_auth/: __init__.py  routes.py  schema.py
backend/app/api/analytics/: __init__.py  routes.py  schema.py
backend/app/api/auth/: oauth.py  routes.py  schema.py
backend/app/api/events/: routes.py  schema.py  (+1 more)
backend/app/config/: .env.example
backend/app/core/: db.py  dependencies.py  log.py  security.py
backend/app/migrations/: env.py
backend/app/models/: __init__.py  admin.py  base.py  event.py  event_attendee.py  event_co_host.py  event_manager_request.py  policy_template.py  room.py  site_analytics_event.py  team.py  user.py
backend/app/tests/: conftest.py  test_admin.py  test_admin_console_services.py  test_admin_routes.py  test_analytics_routes.py  test_auth_routes.py  test_bingo_interaction_db_integration.py  test_bingo_interaction_services.py  test_bingo_login_service.py  test_event_model.py  test_event_routes.py  test_event_seo_routes.py  test_policy_template_defaults.py  test_security.py  test_task3_schema.py  test_task4_play_api.py  test_user_auth.py
(+302 files in other folders)
