[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["4roring <4roring@naver.com>"]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.13.1"
asyncpg = "^0.31.0"
bcrypt = "^5.0.0"
fastapi = "^0.109.0"
httpx = "^0.27.0"
cryptography = "^46.0.7"
pandas = "^2.2.3"
prometheus-fastapi-instrumentator = "^6.1.0"
python-dotenv = "^1.0.1"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
tzdata = "^2024.1"
uvicorn = "^0.27.0"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-asyncio = "^0.23.3"
black = "^26.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
